crates/shipper/src/engine/parallel/snapshots/shipper__engine__parallel__tests__snapshot_tests__snapshot_chunk_by_max_concurrent_empty.snap
---
source: crates/shipper/src/engine/parallel/mod.rs
assertion_line: 3160
expression: chunks
---
[]
