crates/shipper/src/engine/parallel/snapshots/shipper__engine__parallel__tests__snapshot_tests__snapshot_chunk_by_max_concurrent_one.snap
---
source: crates/shipper/src/engine/parallel/mod.rs
assertion_line: 3146
expression: chunks
---
[
    [
        "x",
    ],
    [
        "y",
    ],
    [
        "z",
    ],
]
