crates/shipper/src/engine/parallel/snapshots/shipper__engine__parallel__tests__snapshot_tests__snapshot_execution_plan_diamond.snap
---
source: crates/shipper/src/engine/parallel/mod.rs
expression: layout
---
[
    (
        0,
        [
            "a",
        ],
    ),
    (
        1,
        [
            "b",
            "c",
        ],
    ),
    (
        2,
        [
            "d",
        ],
    ),
]
