crates/shipper/src/engine/parallel/snapshots/shipper__engine__parallel__tests__snapshot_tests__snapshot_execution_plan_independent_forest.snap
---
source: crates/shipper/src/engine/parallel/mod.rs
expression: layout
---
[
    (
        0,
        [
            "utils-a",
            "utils-b",
            "utils-c",
            "utils-d",
        ],
    ),
]
