crates/shipper/src/engine/parallel/snapshots/shipper__engine__parallel__tests__snapshot_tests__snapshot_execution_plan_wide_fan_out.snap
---
source: crates/shipper/src/engine/parallel/mod.rs
expression: layout
---
[
    (
        0,
        [
            "core",
        ],
    ),
    (
        1,
        [
            "cli",
            "web",
            "api",
            "worker",
            "bench",
        ],
    ),
]
