crates/shipper/src/engine/parallel/snapshots/shipper__engine__parallel__tests__snapshot_tests__snapshot_policy_effects_fast.snap
---
source: crates/shipper/src/engine/parallel/mod.rs
assertion_line: 3178
expression: effects
---
PolicyEffects {
    run_dry_run: false,
    check_ownership: false,
    strict_ownership: false,
    readiness_enabled: false,
}
