crates/shipper/src/engine/parallel/snapshots/shipper__engine__parallel__tests__snapshot_tests__snapshot_policy_effects_safe.snap
---
source: crates/shipper/src/engine/parallel/mod.rs
assertion_line: 3169
expression: effects
---
PolicyEffects {
    run_dry_run: true,
    check_ownership: false,
    strict_ownership: false,
    readiness_enabled: true,
}
